added integration test

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,13 +9,17 @@
     colors="true"
     failOnRisky="true"
     failOnWarning="true"
+    cacheResult="false"
 >
     <php>
         <ini name="display_startup_errors" value="On"/>
         <ini name="display_errors" value="On"/>
         <ini name="error_reporting" value="-1"/>
-        <env name="KERNEL_CLASS" value="TestKernel"/>
+        <env name="KERNEL_CLASS" value="Mike4Git\ChainBundle\Tests\app\TestKernel"/>
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="disabled" />
+        <env name="APP_ENV" value="test"/>
+        <env name="APP_DEBUG" value="1"/>
+        <env name="APP_SECRET" value="test-secret-key"/>
     </php>
 
     <testsuites>
