added FizzBuzz example for several prioritized handlers

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,6 +3,11 @@ services:
     autowire: true
     autoconfigure: true
 
+  Mike4Git\ChainBundle\Command\ListChainsCommand:
+    tags:
+      - { name: 'console.command' }
+    public: true
+
   Mike4Git\ChainBundle\Registry\ChainHandlerRegistry:
     public: true
 
