added FizzBuzz example for several prioritized handlers

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,11 +3,10 @@ services:
     autowire: true
     autoconfigure: true
 
-  mike4git.chain.registry:
-    class: Mike4Git\ChainBundle\Registry\ChainRegistry
+  Mike4Git\ChainBundle\Registry\ChainHandlerRegistry:
     public: true
 
   Mike4Git\ChainBundle\Executor\ChainExecutor:
     arguments:
-      - '@mike4git.chain.registry'
+      $registry: '@Mike4Git\ChainBundle\Registry\ChainHandlerRegistry'
     public: true
