--- a/compose.yaml
+++ b/compose.yaml
@@ -21,6 +21,7 @@ services:
         FROM php:8.3-cli
         ADD --chmod=0755 https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
         RUN install-php-extensions @composer xdebug
+        RUN apt-get update && apt-get install -y graphviz
         WORKDIR /app
     volumes:
       - ./:/app/
