--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
     "phpstan:ci": "phpstan analyse --ansi --no-interaction --no-progress --error-format=github",
     "tests": "phpunit",
     "tests:coverage:ci": "phpunit --teamcity --coverage-cobertura .coverage/cobertura.xml",
-    "yaml:lint": "yaml-lint config tests/Fixtures/Config"
+    "yaml:lint": "yaml-lint config"
   },
   "scripts-descriptions": {
     "cs:check": "Checks code style (but doesn't fix anything)",
